--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: any
   hive_flutter: any
+  flutter_slidable: ^1.2.0
 
 dev_dependencies:
   flutter_test:
